完成前端页面优化任务，修复级别顺序、学习资料模块和权限检查问题